# Bot-GPT

./: .env.example  Dockerfile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: graph.py
app/api/v1/: router.py
app/api/v1/routes/: conversations.py  documents.py
app/core/: config.py
app/db/: __init__.py  models.py  session.py
app/embeddings/: factory.py
app/llm/: factory.py
app/rag/: embeddings.py  retrieval.py
app/services/: ingestion.py
ui/: streamlit_app.py
